# hydrometer

./: .gitignore
board/: board-cache.lib  board-rescue.lib  board.kicad_pcb  board.net  board.pro  board.sch  fp-info-cache  fp-lib-table  symbols.lib
board/footprints.pretty/: SS-12F23-SPDT.kicad_mod  gy-251.kicad_mod
board/gerber/: board-B_Adhes.gbr  board-B_CrtYd.gbr  board-B_Cu.gbr  board-B_Fab.gbr  board-B_Mask.gbr  board-B_Paste.gbr  board-B_SilkS.gbr  board-Cmts_User.gbr  board-Dwgs_User.gbr  board-Eco1_User.gbr  board-Eco2_User.gbr  board-Edge_Cuts.gbr  board-F_Adhes.gbr  board-F_CrtYd.gbr  board-F_Cu.gbr  board-F_Fab.gbr  board-F_Mask.gbr  board-F_Paste.gbr  board-F_SilkS.gbr  board-Margin.gbr  board-job.gbrjob  board.drl
firmware/: Makefile  http.c  http.h  main.c  measurements.c  measurements.h  mpu.c  mpu.h
server/: Cargo.toml
server/src/: main.rs
sled/: sled.scad
