[package]
name = "server"
version = "0.1.0"
authors = ["Michael Killough <michaeljkillough@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
anyhow = "1.0"
bytes = "0.5"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
